exec inicial + double quotes for json example

--- a/cnab240/confs/exemplo.conf
+++ b/cnab240/confs/exemplo.conf
@@ -1,22 +1,22 @@
 {
-'banco' : '237',
-'nome_banco' :'BRADESCO S/A',
-'arquivo_nsa' :'000001',
-'arquivo_layout' :'089'   
-'empresa_inscricao_tipo' :'2',
-'empresa_inscricao_numero' :'12345678901234',
-'empresa_convenio' :'0000000',
-'empresa_conta_corrente_agencia' : '3002',
-'empresa_conta_corrente_agencia_dv' :'8',
-'empresa_conta_corrente_conta_numero' :'8572',
-'empresa_conta_corrente_conta_dv' :'3',
-'empresa_conta_corrente_digito_verificador' :'',
-'empresa_nome' :'EMPRESA COM UM NOME MUITO BONITO',             ,
-'empresa_endereco_logradouro' :'RUA MONTY PYTHON',
-'empresa_endereco_numero' :'1980',
-'empresa_endereco_complemento' :'',
-'empresa_endereco_cidade' :'RIO DE JANEIRO',
-'empresa_endereco_cep' :'12345',
-'empresa_endereco_cep_complemento' :'067',
-'empresa_endereco_estado' :'RJ'
+"banco" : "237",
+"nome_banco" :"BRADESCO S/A",
+"arquivo_nsa" :"000001",
+"arquivo_layout" :"089"   
+"empresa_inscricao_tipo" :"2",
+"empresa_inscricao_numero" :"12345678901234",
+"empresa_convenio" :"0000000",
+"empresa_conta_corrente_agencia" : "3002",
+"empresa_conta_corrente_agencia_dv" :"8",
+"empresa_conta_corrente_conta_numero" :"8572",
+"empresa_conta_corrente_conta_dv" :"3",
+"empresa_conta_corrente_digito_verificador" :"",
+"empresa_nome" :"EMPRESA COM UM NOME MUITO BONITO",             ,
+"empresa_endereco_logradouro" :"RUA MONTY PYTHON",
+"empresa_endereco_numero" :"1980",
+"empresa_endereco_complemento" :"",
+"empresa_endereco_cidade" :"RIO DE JANEIRO",
+"empresa_endereco_cep" :"12345",
+"empresa_endereco_cep_complemento" :"067",
+"empresa_endereco_estado" :"RJ"
 }
