--- a/cnab240/confs/exemplo.conf
+++ b/cnab240/confs/exemplo.conf
@@ -2,7 +2,7 @@
 "banco" : "237",
 "nome_banco" :"BRADESCO S/A",
 "arquivo_nsa" :"000001",
-"arquivo_layout" :"089"   
+"arquivo_layout" :"089",
 "empresa_inscricao_tipo" :"2",
 "empresa_inscricao_numero" :"12345678901234",
 "empresa_convenio" :"0000000",
@@ -11,8 +11,9 @@
 "empresa_conta_corrente_conta_numero" :"8572",
 "empresa_conta_corrente_conta_dv" :"3",
 "empresa_conta_corrente_digito_verificador" :"",
-"empresa_nome" :"EMPRESA COM UM NOME MUITO BONITO",             ,
+"empresa_nome" :"EMPRESA COM UM NOME MUITO BONITO",
 "empresa_endereco_logradouro" :"RUA MONTY PYTHON",
+"empresa_endereco_bairro" : "Bairro do Jards",
 "empresa_endereco_numero" :"1980",
 "empresa_endereco_complemento" :"",
 "empresa_endereco_cidade" :"RIO DE JANEIRO",
