no header do lote o endereço não tem bairro que interferiria no campo do cep, conf para dentro do remessa_pagamento

--- a/cnab240/confs/exemplo.bradesco.conf
+++ b/cnab240/confs/exemplo.bradesco.conf
@@ -3,6 +3,7 @@
 "nome_banco" :"BRADESCO S/A",
 "arquivo_nsa" :"000001",
 "arquivo_layout" :"089",
+"arquivo_densidade":"01600",
 "empresa_inscricao_tipo" :"2",
 "empresa_inscricao_numero" :"12345678901234",
 "empresa_convenio" :"0000000",
