ajuste para adequação ao Banco Inter testes em producao feitos em 12.2020

--- a/cnab240/confs/exemplo.bancointer.conf
+++ b/cnab240/confs/exemplo.bancointer.conf
@@ -1,11 +1,11 @@
 {
-"banco" : "77",
-"nome_banco" :"BANCO INTERMEDIUM S/A",
+"banco" : "077",
+"nome_banco" :"BANCO INTER S/A",
 "arquivo_nsa" :"000001",
 "arquivo_layout" :"030",
 "arquivo_densidade":"00000",
 "empresa_inscricao_tipo" :"2",
-"empresa_inscricao_numero" :"12345678901234",
+"empresa_inscricao_numero" :"12345673000112",
 "empresa_convenio" :"0000000",
 "empresa_conta_corrente_agencia" : "1",
 "empresa_conta_corrente_agencia_dv" :"9",
